# covid19-sir

./: .gitignore  .travis.yml  01_download.ipynb  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  condaenv._vffl0ks.requirements.txt  environment.yml  example.sh  input.py  input.sh  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md  delete-merged-branch-config.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug.yml  02_new_feature.yml  03_docs.yml  04_development.yml  06_question.yml  bug-issue-template.md  bug.yml  development.yml  docs.yml  feature_request.md  need-documentation.md  new_feature.yml  question.md  question.yml  reaquest-a-new-feature.md  request-a-new-feature.md  request-fixing-a-bug.md  request-new-method-of-dataloader-class.md  revise.md  test.yml
.github/PULL_REQUEST_TEMPLATE/: pull-request-standard.md
.github/workflow_disabled/: test.yml
.github/workflows/: codeql-analysis.yml  deploy.yml  full_test.yml  installation_test.yml  pip-install.yml  pr_verify_linked_issue.yml  python-dev.yml  rebase-pull-requests.yml  rebase.yml  test.yml  test_latest-dev.yml  test_pyver.yml
.semaphore/: semaphore.yml
covsirphy/: __citation__.py  __init__.py  __version__.py
covsirphy/_deprecated/: _mbase.py  _sewirf.py  _sir.py  _sird.py  _sirf.py  _sirfv.py  automl_handler.py  autots_predictor.py  cbase.py  colored_map.py  country_data.py  covid19datahub.py  data_handler.py  dataloader.py  db_base.py  db_covid19dh.py  db_cs_japan.py  db_google.py  db_owid.py  example_data.py  japan_data.py  japan_map.py  jhu_complement.py  jhu_data.py  linelist.py  mobility_data.py  model_validator.py  ode_handler.py  ode_solver.py  ode_solver_multi.py  oxcgrt.py  param_decision_tree.py  param_elastic_net.py  param_estimator.py  param_lightgbm.py  param_svr.py  param_tracker.py  pcr_data.py  phase_estimator.py  phase_tracker.py  (+16 more)
covsirphy/analysis/: __init__.py  data_handler.py  dynamics.py  estimator.py  example_data.py  model_validator.py  param_tracker.py  phase_series.py  phase_tracker.py  policy.py  predicter.py  scenario.py  simulation.py  simulator.py  sr_change.py  sr_trend.py
covsirphy/automl/: _sewirf.py  _sir.py  _sird.py  _sirf.py  _sirfv.py  automl_handler.py  autots_predictor.py
covsirphy/cleaning/: __init__.py  cbase.py  country_data.py  covid19datahub.py  dataloader.py  example_data.py  geography.py  geometry.py  japan_data.py  jhu.py  jhu_complement.py  jhu_data.py  linelist.py  mobility_data.py  nondim_data.py  oxcgrt.py  pcr_data.py  population.py  pyramid.py  term.py  vaccine_data.py  word.py
covsirphy/collecting/: data_collector.py  geography.py
covsirphy/downloading/: _db.py  _db_covid19dh.py  _db_cs_japan.py  _db_google.py  _db_owid.py  _db_wpp.py  _provider.py  db.py  db_covid19dh.py  db_cs_japan.py  db_google.py  db_owid.py  downloader.py  provider.py
covsirphy/dynamics/: _simulator.py  _trend.py  dynamics.py  ode.py  sewirf.py  sir.py  sird.py  sirf.py
covsirphy/eda/: eda.py
covsirphy/engineering/: _cleaner.py  _complement.py  _transformer.py  cleaner.py  complement.py  complementpy  engineer.py  transformer.py
covsirphy/gis/: _choropleth.py  _geometry.py  _layer.py  _subset.py  choropleth.py  geometry.py  gis.py  layer.py  subset.py
covsirphy/loading/: covid19datahub.py  dataloader.py  db_base.py  db_covid19dh.py  db_cs_japan.py  db_google.py  db_owid.py  loaderbase.py  recommended.py
covsirphy/ode/: mbase.py  mbasecom.py  ode_handler.py  ode_solver.py  ode_solver_multi.py  param_estimator.py  sewirf.py  sir.py  sird.py  sirf.py  sirfv.py
covsirphy/optimize/: estimator.py
covsirphy/phase/: estimator.py  estimator_old.py  nondim.py  nondim_data.py  ode_data.py  optimize.py  phase_data.py  phase_estimater.py  (+6 more)
data/: .gitignore  README.md  japan_data.py  vaccine_data.py
docs/: .buildinfo  01_data_preparation.html  02_data_engineering.html  03_ode.html  04_phase_dependent.html  05_scenario_analysis.html  06_prediction.html  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.html  CONTRIBUTING.rst  INSTALLATION.html  INSTALLATION.rst  Makefile  README.html  README.rst  SECURITY.html  SECURITY.md  TERM.html  TERM.rst  conf.py  covsirphy.analysis.data_handler.html  covsirphy.analysis.data_handler.rst  covsirphy.analysis.example_data.html  covsirphy.analysis.example_data.rst  covsirphy.analysis.html  covsirphy.analysis.model_validator.html  covsirphy.analysis.param_tracker.html  covsirphy.analysis.rst  covsirphy.analysis.scenario.html  covsirphy.automl.html  covsirphy.cleaning.cbase.html  covsirphy.cleaning.cbase.rst  covsirphy.cleaning.country_data.html  covsirphy.cleaning.country_data.rst  covsirphy.cleaning.covid19datahub.html  covsirphy.cleaning.covid19datahub.rst  covsirphy.cleaning.dataloader.html  covsirphy.cleaning.html  (+96 more)
example/: 01_data_preparation.ipynb  01_download.ipynb  02_data_engineering.ipynb  03_ode.ipynb  04_phase_dependent.ipynb  05_scenario_analysis.ipynb  06_prediction.ipynb  country_data.py  dataset.py  dataset_jhu.py  dataset_load.py  dataset_oxcgrt.py  dataset_population.py  demo.py  estimate_delay_days.ipynb  example.ipynb  jhu_data.py  load_linelist.py  long_simulation.py  model_validation.py  phase.py  population.py  reproductive_optimization.py  scenario.py  scenario_analysis.py  scenario_analysis_bra.py  scenario_analysis_deu.py  scenario_analysis_esp.py  scenario_analysis_fra.py  scenario_analysis_gbr.py  scenario_analysis_grc.py  scenario_analysis_jpn.py  scenario_analysis_nld.py  scenario_analysis_retro.py  scenario_analysis_usa.py  sewirf_model.py  simulation.py  sir_model.py  sird_model.py  sirf_model.py  (+12 more)
tests/: conftest.py  test_change_finder.py  test_data_handler.py  test_data_loader.py  test_datahub.py  test_dataloader.py  test_downloading.py  test_example_data.py  test_geography.py  test_loading.py  test_meta.py  test_model_validator.py  test_ode.py  test_param_tracker.py  test_phase_series.py  test_phase_tracker.py  test_phase_unit.py  test_policy_measures.py  test_scenario.py  test_trend.py  test_util.py  test_visualize.py
(+347 files in other folders)
