[tool.poetry]
name = "covsirphy"
version = "2.28.0"
description = "COVID-19 data analysis with phase-dependent SIR-derived ODE models"
authors = ["Hirokazu Takaya <lisphilar@outlook.jp>"]
license = "Apache-2.0"
repository = "https://github.com/lisphilar/covid19-sir/"
documentation = "https://lisphilar.github.io/covid19-sir/"
readme = "README.md"
keywords = ["covid19", "covid", "data engineering", "data science"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
# `poetry install` installs all dependencies, including optional ones
# `poetry install --only main` install only main dependencies
python = "^3.8,<3.11"
numpy = "^1.23.3"
optuna = "^3.0.1"
pandas = "^1.5.1"
pyarrow = ">=9,<11"
tabulate = "^0.9.0"
scipy = ">=1.8.1"
ruptures = "^1.1.7"
matplotlib = "^3.6.1"
country-converter = ">=0.7.7,<0.9.0"
geopandas = ">=0.11.1,<0.13.0"
Unidecode = "^1.3.4"
AutoTS = "^0.5.0"
p-tqdm = "^1.4.0"
pca = "^1.8.3"
loguru = "^0.6.0"
requests = "^2.28.1"
typing-extensions = "^4.4.0"

[tool.poetry.group.test]
# poetry install --with test
optional = true
[tool.poetry.group.test.dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
pyproject-flake8 = "^5.0.4.post1"
deptry = "0.5.12"
pyright = "^1.1.275"
pytest = "^7.2.0"
pytest-profiling = "^1.7.0"
pytest-cov = "^3.0.0"
tuna = "^0.5.11"

[tool.poetry.group.docs]
# poetry install --with docs
optional = true
[tool.poetry.group.docs.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.15.3"
ipywidgets = "^8.0.2"
docutils = "0.16"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-seqdiag = "^3.0.0"
sphinx-copybutton = "^0.5.0"
nbsphinx = "^0.8.9"
Pillow = "^9.2.0"
myst-parser = "^0.18.0"
sympy = "^1.11.1"
sphinx = "^5.2.3"
sphinx-autodoc-typehints = "^1.19.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-ignore = ["E501"]

[tool.coverage.run]
branch = true
disable_warnings = ["no-data-collected"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error", "ignore::pytest.PytestDeprecationWarning"]
addopts = "--cov=covsirphy --cov-report=xml --cov-report=term-missing -vv --no-cov-on-fail -p no:cacheprovider --durations=1 --maxfail=1"

[tool.deptry]
ignore_transitive = ['urllib3']
ignore_obsolete = ['pyarrow', 'tabulate', 'requests']
exclude = ['tests', '.venv', 'example', 'docs']

[tool.pyright]
include = ["covsirphy"]
reportOptionalMemberAccess = false
reportUnboundVariable = false
reportGeneralTypeIssues = false
