[tool.poetry]
name = "covsirphy"
version = "3.1.2"
description = "COVID-19 data analysis with phase-dependent SIR-derived ODE models"
authors = ["Hirokazu Takaya <lisphilar@outlook.jp>"]
license = "Apache-2.0"
repository = "https://github.com/lisphilar/covid19-sir/"
documentation = "https://lisphilar.github.io/covid19-sir/"
readme = "README.md"
keywords = ["covid19", "covid", "data engineering", "data science"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
# `poetry install` installs all dependencies, including optional ones
# `poetry install --only main` install only main dependencies
python = "^3.9,<3.13"
numpy = ">=1.26.3,<3.0.0"
optuna = "^3.5.0"
pandas = "^2.2.0"
pyarrow = ">=15,<18"
tabulate = "^0.9.0"
scipy = "^1.12.0"
ruptures = "^1.1.9"
matplotlib = "^3.8.2"
country-converter = "^1.2.0"
geopandas = ">=0.14.3,<1.1.0"
Unidecode = "^1.3.8"
AutoTS = "^0.6.10"
p-tqdm = "^1.4.0"
pca = "^2.0.5"
loguru = "^0.7.2"
requests = "^2.31.0"
typing-extensions = "^4.9.0"

[tool.poetry.group.test]
# poetry install --with test
optional = true
[tool.poetry.group.test.dependencies]
autopep8 = "^2.0.4"
flake8 = "^7.0.0"
pyproject-flake8 = "^7.0.0"
deptry = ">=0.12,<0.20"
pyright = "^1.1.349"
pytest = "^8.0.0"
pytest-profiling = "^1.7.0"
pytest-cov = "^4.1.0"
tuna = "^0.5.11"

[tool.poetry.group.docs]
# poetry install --with docs
optional = true
[tool.poetry.group.docs.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.0"
ipywidgets = "^8.1.1"
docutils = "^0.20.1"
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-seqdiag = "^3.0.0"
sphinx-copybutton = "^0.5.2"
nbsphinx = "^0.9.3"
Pillow = "^10.2.0"
myst-parser = ">=2,<4"
sympy = "^1.12.0"
sphinx = "^7.2.6"
sphinx-autodoc-typehints = ">=1.25.3,<3.0.0"

[tool.poetry.group.data.dependencies]
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-ignore = ["E501"]

[tool.coverage.run]
branch = true
disable_warnings = ["no-data-collected"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error", "ignore::pytest.PytestDeprecationWarning"]
addopts = "--cov=covsirphy --cov-report=xml --cov-report=term-missing -vv --no-cov-on-fail -p no:cacheprovider --durations=1 --maxfail=1"

[tool.deptry]
exclude = ["tests", ".venv", "example", "docs"]

[tool.deptry.per_rule_ignores]
DEP003 = ["urllib3"]
DEP002 = ["pyarrow", "tabulate", "requests"]


[tool.pyright]
include = ["covsirphy"]
reportArgumentType = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = false
reportOperatorIssue = false
reportOptionalMemberAccess = false
reportReturnType = false
reportUnboundVariable = false
