[metadata]
name = covsirphy
version = 2.2.0
url = https://github.com/lisphilar/covid19-sir
author = Lisphilar
license_file = LICENSE
description = Package for COVID-19 data analysis with SIR-derived models
long_description = file: README.md
keywords = covid19


[options]
packages = find:
install_requires =
    numpy
    matplotlib
    optuna
    pandas
    seaborn
    dask
    scipy
    scikit-learn
    japanmap
    better-exceptions
