[metadata]
name = covsirphy
version = attr: covsirphy.__version__.__version__
url = https://github.com/lisphilar/covid19-sir
author = Lisphilar
author_email = lisphilar@outlook.jp
license = Apache License 2.0
license_file = LICENSE
description = Package for COVID-19 analysis with phase-dependent SIR-derived ODE models
long_description = file: README.rst
keywords = covid19
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
packages = find:
install_requires =
    numpy
    matplotlib
    optuna
    pandas
    seaborn
    dask[complete]
    scipy
    scikit-learn
    japanmap
    better-exceptions
    requests
    ruptures
    covid19dh
